Fix Image Path and Background Color.

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
       text-align: center;
     }
     .main section.page2 {
-      background: #555557 url(img/bg01.png) no-repeat center -150px ;
+      background: url(img/bg01.png) no-repeat center -150px;
     }
     .main section.page2 > img {
       position: absolute;
@@ -299,7 +299,7 @@
       color: #FFF;
       }
     .main section.page3 {
-      background:url(img/bg01.png) no-repeat center -150px;
+      background: url(img/bg01.png) no-repeat center -150px;
     }
     .main section.page3 .page_container {
       overflow: hidden;
@@ -318,6 +318,10 @@
       line-height: 160%;
       font-weight: 100;
       font-size: 21px;
+    }
+    .viewing-page-3 .back {
+      background: rgba(0, 0, 0, 0.25);
+      color: #FFF;
     }
 
     body.disabled-onepage-scroll .onepage-wrapper  section {
@@ -389,7 +393,7 @@
   <a href="http://140.109.161.42/gis/taichung.aspx"><img style="width: 18%" onmouseover="this.src='img/map03b.png';" onmouseout="this.src='img/map03a.png';" src="img/map03a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/twhgis.aspx"><img style="width: 18%" onmouseover="this.src='img/map01b.png';" onmouseout="this.src='img/map01a.png';" src="img/map01a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/tainan.aspx"><img style="width: 18%" onmouseover="this.src='img/map04b.png';" onmouseout="this.src='img/map04a.png';" src="img/map04a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
+  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='img/map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
   <div align="right" style="margin-right: 20px">
   <font color="#999999" size="2"><i>Designed by Kuo-Feng Lai, <a href="http://github.com/peachananr/onepage-scroll">OnePageScroll by Pete R.</a></i></font>
   </div>
@@ -398,12 +402,12 @@
 
 <section class="page2">
   <div class="page_container">
-  <img style="width: 100%" src="img/title01.png">
+  <!-- img style="width: 100%" src="img/title01.png" -->
   <a href="http://140.109.161.42/gis/taipei.aspx"><img style="width: 18%" onmouseover="this.src='img/map02b.png';" onmouseout="this.src='img/map02a.png';" src="img/map02a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/taichung.aspx"><img style="width: 18%" onmouseover="this.src='img/map03b.png';" onmouseout="this.src='img/map03a.png';" src="img/map03a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/twhgis.aspx"><img style="width: 18%" onmouseover="this.src='img/map01b.png';" onmouseout="this.src='img/map01a.png';" src="img/map01a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/tainan.aspx"><img style="width: 18%" onmouseover="this.src='img/map04b.png';" onmouseout="this.src='img/map04a.png';" src="img/map04a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
+  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='img/map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
   <div align="right" style="margin-right: 20px">
   <font color="#999999" size="2"><i>Designed by Kuo-Feng Lai, <a href="http://github.com/peachananr/onepage-scroll">OnePageScroll by Pete R.</a></i></font>
   </div>
@@ -412,12 +416,12 @@
 
 <section class="page3">
   <div class="page_container">
-  <img style="width: 100%" src="img/title01.png">
+  <!-- img style="width: 100%" src="img/title01.png" -->
   <a href="http://140.109.161.42/gis/taipei.aspx"><img style="width: 18%" onmouseover="this.src='img/map02b.png';" onmouseout="this.src='img/map02a.png';" src="img/map02a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/taichung.aspx"><img style="width: 18%" onmouseover="this.src='img/map03b.png';" onmouseout="this.src='img/map03a.png';" src="img/map03a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/twhgis.aspx"><img style="width: 18%" onmouseover="this.src='img/map01b.png';" onmouseout="this.src='img/map01a.png';" src="img/map01a.png" border="0"/></a>
   <a href="http://140.109.161.42/gis/tainan.aspx"><img style="width: 18%" onmouseover="this.src='img/map04b.png';" onmouseout="this.src='img/map04a.png';" src="img/map04a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
+  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='img/map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
   <div align="right" style="margin-right: 20px">
   <font color="#999999" size="2"><i>Designed by Kuo-Feng Lai, <a href="http://github.com/peachananr/onepage-scroll">OnePageScroll by Pete R.</a></i></font>
   </div>
