--- a/index.html
+++ b/index.html
@@ -389,35 +389,23 @@
 <section class="page1">
   <div class="page_container">
   <img style="width: 100%" src="img/title01.png">
-  <a href="http://140.109.161.42/gis/taipei.aspx"><img style="width: 18%" onmouseover="this.src='img/map02b.png';" onmouseout="this.src='img/map02a.png';" src="img/map02a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/taichung.aspx"><img style="width: 18%" onmouseover="this.src='img/map03b.png';" onmouseout="this.src='img/map03a.png';" src="img/map03a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/twhgis.aspx"><img style="width: 18%" onmouseover="this.src='img/map01b.png';" onmouseout="this.src='img/map01a.png';" src="img/map01a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/tainan.aspx"><img style="width: 18%" onmouseover="this.src='img/map04b.png';" onmouseout="this.src='img/map04a.png';" src="img/map04a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='img/map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/taipei.aspx"><img style="width: 18%" onmouseover="this.src='img/map02b.png';" onmouseout="this.src='img/map02a.png';" src="img/map02a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/taichung.aspx"><img style="width: 18%" onmouseover="this.src='img/map03b.png';" onmouseout="this.src='img/map03a.png';" src="img/map03a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/twhgis.aspx"><img style="width: 18%" onmouseover="this.src='img/map01b.png';" onmouseout="this.src='img/map01a.png';" src="img/map01a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/tainan.aspx"><img style="width: 18%" onmouseover="this.src='img/map04b.png';" onmouseout="this.src='img/map04a.png';" src="img/map04a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='img/map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
   </div>
 </section>
 
 <section class="page2">
   <div class="page_container">
-  <!-- img style="width: 100%" src="img/title01.png" -->
-  <a href="http://140.109.161.42/gis/taipei.aspx"><img style="width: 18%" onmouseover="this.src='img/map02b.png';" onmouseout="this.src='img/map02a.png';" src="img/map02a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/taichung.aspx"><img style="width: 18%" onmouseover="this.src='img/map03b.png';" onmouseout="this.src='img/map03a.png';" src="img/map03a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/twhgis.aspx"><img style="width: 18%" onmouseover="this.src='img/map01b.png';" onmouseout="this.src='img/map01a.png';" src="img/map01a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/tainan.aspx"><img style="width: 18%" onmouseover="this.src='img/map04b.png';" onmouseout="this.src='img/map04a.png';" src="img/map04a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='img/map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
-  </div>
-</section>
-
-<section class="page3">
-  <div class="page_container">
-  <!-- img style="width: 100%" src="img/title01.png" -->
-  <a href="http://140.109.161.42/gis/taipei.aspx"><img style="width: 18%" onmouseover="this.src='img/map02b.png';" onmouseout="this.src='img/map02a.png';" src="img/map02a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/taichung.aspx"><img style="width: 18%" onmouseover="this.src='img/map03b.png';" onmouseout="this.src='img/map03a.png';" src="img/map03a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/twhgis.aspx"><img style="width: 18%" onmouseover="this.src='img/map01b.png';" onmouseout="this.src='img/map01a.png';" src="img/map01a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/tainan.aspx"><img style="width: 18%" onmouseover="this.src='img/map04b.png';" onmouseout="this.src='img/map04a.png';" src="img/map04a.png" border="0"/></a>
-  <a href="http://140.109.161.42/gis/kaohsiung.aspx"><img style="width: 18%" onmouseover="this.src='img/map05b.png';" onmouseout="this.src='img/map05a.png';" src="img/map05a.png" border="0"/></a>
-  <div align="right" style="margin-right: 20px">
-  <font color="#999999" size="2"><i>Designed by Kuo-Feng Lai, <a href="http://github.com/peachananr/onepage-scroll">OnePageScroll by Pete R.</a></i></font>
+  <a href="http://gissrv4.sinica.edu.tw/gis/keelung.aspx"><img style="width: 18%" onmouseover="this.src='img/map06b.png';" onmouseout="this.src='img/map06a.png';" src="img/map06a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/tamsui.aspx"><img style="width: 18%" onmouseover="this.src='img/map07b.png';" onmouseout="this.src='img/map07a.png';" src="img/map07a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/newtaipei.aspx"><img style="width: 18%" onmouseover="this.src='img/map08b.png';" onmouseout="this.src='img/map08a.png';" src="img/map08a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/changhua.aspx"><img style="width: 18%" onmouseover="this.src='img/map09b.png';" onmouseout="this.src='img/map09a.png';" src="img/map09a.png" border="0"/></a>
+  <a href="http://gissrv4.sinica.edu.tw/gis/chiayi.aspx"><img style="width: 18%" onmouseover="this.src='img/map10b.png';" onmouseout="this.src='img/map10a.png';" src="img/map10a.png" border="0"/></a>
+  <div align="right" style="margin-right: 5%">
+  <font style="font-size: 75%"><i>Designed by Kuo-Feng Lai, <a href="http://github.com/peachananr/onepage-scroll">OnePageScroll by Pete R.</a></i></font>
   </div>
   </div>
 </section>
